Fix style guide jump nav z-index

--- a/src/assets/less/styleguide.less
+++ b/src/assets/less/styleguide.less
@@ -196,7 +196,7 @@
             text-align: right;
             visibility: visible;
             width: 90%;
-            z-index: 1;
+            z-index: 100;
         }
     }
 }
